# lsfg-vk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  default.nix  flake.nix  flatpak-enabler.sh  install.sh  io.github.PancakeTAS.lsfgvk.yml  lsfg-vk-ui.flatpak  org.freedesktop.Platform.VulkanLayer.lsfgvk.yml
.github/: build.yml
.github/ISSUE_TEMPLATE/: donotissue.md
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  actions.yml  build-arch.yml  build-debian.yml  build-fedora.yml  build-flatpak.yml  build-ubuntu.yml  build.yml  build_ci.yml  build_test.yml  ci.yml  flatpak-ui.yml  flatpak.yml  flatpak_ci.yml  flatpak_test.yml  flatpakk.yml  manual.yml  package.yml  package_test.yml  quality.yml  security.yml  test.yml  update-flatpak-23.08.yml  update-flatpak-24.08.yml  update-flatpak.yml  update-ui.yml
docs/: Building-From-Source.md  Configuration.md  Flatpak-Guide.md  Troubleshooting.md
flatpak/: gay.pancake.lsfg-vk-ui.metainfo.xml  gay.pancake.lsfg-vk-ui.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk_23.08.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk_24.08.yml
framegen/: CMakeLists.txt
framegen/public/: lsfg_3_1.hpp  lsfg_3_1p.hpp
framegen/v3.1_src/: context.cpp  lsfg.cpp
framegen/v3.1p_src/: context.cpp  lsfg.cpp
include/: context.hpp  layer.hpp
include/extract/: dll.hpp  (+1 more)
lsfg-vk-backend/: .clang-tidy  CMakeLists.txt
lsfg-vk-backend/include/lsfg-vk/: lsfgvk.hpp
lsfg-vk-backend/include/lsfg-vk-backend/: lsfgvk.hpp
lsfg-vk-backend/src/: lsfgvk.cpp  lsfgvk.hpp
lsfg-vk-backend/src/extraction/: dll_reader.cpp  dll_reader.hpp  shader_registry.cpp  shader_registry.hpp
lsfg-vk-backend/src/helpers/: managed_shader.cpp  managed_shader.hpp  utils.cpp  utils.hpp
lsfg-vk-backend/src/modules/: library.cpp  library.hpp  pipeline.cpp  pipeline.hpp
lsfg-vk-backend/src/modules/pipeline/: signature.hpp
lsfg-vk-backend/src/modules/pipeline/signature/: helpers.hpp  image.hpp  pass.hpp
lsfg-vk-backend/src/shaderchains/: alpha0.cpp  alpha0.hpp  alpha1.cpp  alpha1.hpp  beta0.cpp  beta0.hpp  beta1.cpp  beta1.hpp  delta0.cpp  gamma0.cpp  generate.cpp  generate.hpp  mipmaps.cpp  mipmaps.hpp
lsfg-vk-backend/src/utility/: logger.cpp  logger.hpp  pipelines.cpp  pipelines.hpp  vkhelper.cpp  vkhelper.hpp
lsfg-vk-cli/: .clang-tidy  CMakeLists.txt
lsfg-vk-cli/src/: main.cpp
lsfg-vk-cli/src/tools/: benchmark.cpp  benchmark.hpp  debug.cpp  debug.hpp  validate.cpp  validate.hpp
lsfg-vk-common/: .clang-tidy  CMakeLists.txt
lsfg-vk-debug/: CMakeLists.txt
lsfg-vk-gen/: CMakeLists.txt
lsfg-vk-layer/: .clang-tidy  CMakeLists.txt  VkLayer_LS_frame_generation.json
lsfg-vk-layer/src/: config.cpp  config.hpp  detection.hpp  entrypoint.cpp  generator.cpp  generator.hpp  instance.cpp  instance.hpp  layer.cpp  layer.hpp  swapchain.cpp  swapchain.hpp
lsfg-vk-layer/src/configuration/: config.cpp  config.hpp  detection.cpp
lsfg-vk-layer/src/context/: instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp
lsfg-vk-layer/src/hooks/: device.cpp  device.hpp  instance.cpp  instance.hpp  layer.cpp  layer.hpp  swapchain.cpp  swapchain.hpp
lsfg-vk-ui/: .clang-tidy  CMakeLists.txt
src/: context.cpp  hooks.cpp  layer.cpp  main.cpp
test/: CMakeLists.txt
ui/: Cargo.toml  build_appimage.sh
(+114 files in other folders)
